Fix background color on dark mode

--- a/src/scss/theme/_book.scss
+++ b/src/scss/theme/_book.scss
@@ -53,7 +53,6 @@
         height: 500px;
         padding: 30px;
         transition: transform 0.7s ease-in-out;
-        background-color: #fff;
 
         p {
             opacity: 0;
